@@ -1,3 +1,6 @@
+Wed Oct 31 2001  Vitezslav Samel <samel@mail.cz>
+	* bw.h, tty.c, configure.ac: make use of pid_t type
+
 Mon Oct 29 2001  Vitezslav Samel <samel@mail.cz>
 	*** Release joe-2.9.7-pre3 ***
 
